# Artifical_NN

./: CMakeLists.txt  README.md
Util/: format_to_data.py
include/: ANN.h
robot_dataset/: init_weight  sample.out.05.100.results  sample.out.05.100.trained  test.csv  train.csv
src/: ANN.cpp  ANN_test.cpp  ANN_trian.cpp
utilities/: init_weight.py
